US23-01 fixed indentation and link

--- a/src/View/User/Includes/_contact_grey_block.html.twig
+++ b/src/View/User/Includes/_contact_grey_block.html.twig
@@ -3,24 +3,24 @@
         <div class="grey-block col-xl-3 offset-xl-8 col-sm-10 offset-sm-1">
             <div class="contact-grey-section">
                 <div class="mb-3">
-                                    <label class="form-label">Nom</label>
-                    <input type="text" class="form-control" name="nom">
+                    <label for="nom" class="form-label">Nom</label>
+                    <input type="text" class="form-control" id="nom" name="nom">
                 </div>
                 <div class="mb-3">
-                    <label class="form-label">Prenom</label>
-                    <input type="text" class="form-control" name="prenom">
+                    <label for="prenom" class="form-label">Prenom</label>
+                    <input type="text" class="form-control" id="prenom" name="prenom">
                 </div>
                 <div class="mb-3">
-                    <label class="form-label">Telephone</label>
-                    <input type="text" class="form-control" name="telephone">
+                    <label for="telephone" class="form-label">Telephone</label>
+                    <input type="text" class="form-control" id="telephone" name="telephone">
                 </div>
                 <div class="mb-3">
-                    <label class="form-label">Email</label>
-                    <input type="email" class="form-control" name="email">
+                    <label for="email"class="form-label">Email</label>
+                    <input type="email" class="form-control" id="email" name="email">
                 </div>
                 <div class="mb-3">
-                        <label class="form-label">Message</label>
-                    <textarea class="form-control" name="textarea" rows="3"></textarea>
+                    <label for="message" class="form-label">Message</label>
+                    <textarea class="form-control" id="message" name="textarea" rows="3"></textarea>
                 </div>
                 <button class="button">Envoyer</button>
             </div>
