--- a/public/assets/css/course_tab.css
+++ b/public/assets/css/course_tab.css
@@ -1,7 +1,7 @@
 .course-tab-section {
     --padding: 2em;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     padding: var(--padding); 
     background-color: var(--grey);
     flex-direction: column;
@@ -72,7 +72,6 @@
 
 .btn-inscription:hover {
     text-decoration: underline;
-    color: var(--dark);
 }
 
 .btn-course:hover {
