--- a/public/assets/css/course_white_block.css
+++ b/public/assets/css/course_white_block.css
@@ -1,12 +1,13 @@
 .course-white-block-section {
     --padding: 2em;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     padding: var(--padding); 
     background-color: var(--light);
     flex-direction: column;
     flex-wrap: wrap;
     font-family: var(--text-font);
+    min-height: 120vh;
 }
 
 .white-block-title {
@@ -19,6 +20,8 @@
 }
 
 .white-block-text {
+    padding-top: 20px;
+    margin: 10px;
     display: flex;
     flex-wrap: wrap;
 }
