--- a/src/View/User/Includes/_carousel.html.twig
+++ b/src/View/User/Includes/_carousel.html.twig
@@ -1,4 +1,4 @@
-<div class="position-relative">
+<div class="carousel">
     <div id="carouselExampleIndicators" class="carousel-slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -7,13 +7,13 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/assets/images/accueil.jpg" class="d-block w-100">
+                <img src="/assets/images/faceharas.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
-                <img src="/assets/images/haras.jpg" class="d-block w-100">
+                <img src="/assets/images/poneycarousel.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
-                <img src="/assets/images/accueil.jpg" class="d-block w-100">
+                <img src="/assets/images/prairieharas.jpg" class="d-block w-100">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
