--- a/src/View/User/Includes/_course_tab.html.twig
+++ b/src/View/User/Includes/_course_tab.html.twig
@@ -1,5 +1,5 @@
 {% block course_tab %}
-    <div class="course-tab-section col-xl-3 offset-xl-8 col-sm-10 offset-sm-1">
+    <div class="course-tab-section col-xl-8 m-0 col-sm-12">
         <div class="tab-title-text">
             <h2 class="tab-title">
                 CONDITIONS
