--- a/src/View/User/course.html.twig
+++ b/src/View/User/course.html.twig
@@ -4,7 +4,12 @@
 {% endblock %}
 {% block content %}
     {% include 'Includes/_banner.html.twig' with {image: 'collector.webp', alt: 'desesperate horse', title: 'COURS'} %}
-    {% include 'User/Includes/_course_tab.html.twig' %}
-    {% include 'User/Includes/_carousel.html.twig' %}
-    {% include 'User/Includes/_course_white_block.html.twig' %}
+    <div class='content-page'>
+        <div class='left-page'>
+            {% include 'User/Includes/_course_white_block.html.twig' %}
+        </div>
+        <div class='right-page'>
+            {% include 'User/Includes/_course_tab.html.twig' %}
+        </div>
+    </div>
 {% endblock %}
