--- a/public/assets/css/course.css
+++ b/public/assets/css/course.css
@@ -1,26 +1,31 @@
 @import 'course_tab.css';
-@import 'carousel.css';
 @import 'course_white_block.css';
 
 @media (min-width: 1000px) {
     .content-page {
+        --width: 95%;
+        --padding-bottom: 40px;
+        --min-height: 100%;
         display: flex;
         justify-content: center;
-        width: 95%;
-        padding-bottom: 40px;
-        min-height: 100%;
+        width: var(--width);
+        padding-bottom: var(--padding-bottom);
+        min-height: var(--min-height);
     }
     
     .left-page {
+        --width: 100vw;
+        --min-height: 120vh;
         display: flex;
         justify-content: flex-end;
-        width: 100vw;
-        min-height: 120vh;
+        width: var(--width);
+        min-height: var(--min-height);
     }
     
     .right-page {
+        --width: 60vw;
         display: flex;
-        min-height: 120vh;
-        width: 60vw;
+        min-height: var(--min-height);
+        width: var(--width);
     }
 }
