US23-01 rename label input in english

--- a/src/View/User/Includes/_contact_grey_block.html.twig
+++ b/src/View/User/Includes/_contact_grey_block.html.twig
@@ -3,16 +3,16 @@
         <div class="grey-block col-xl-3 offset-xl-8 col-sm-10 offset-sm-1">
             <div class="contact-grey-section">
                 <div class="mb-3">
-                    <label for="nom" class="form-label">Nom</label>
-                    <input type="text" class="form-control" id="nom" name="nom">
+                    <label for="lastname" class="form-label">Nom</label>
+                    <input type="text" class="form-control" id="lastname" name="lastname">
                 </div>
                 <div class="mb-3">
-                    <label for="prenom" class="form-label">Prenom</label>
-                    <input type="text" class="form-control" id="prenom" name="prenom">
+                    <label for="firstname" class="form-label">Prenom</label>
+                    <input type="text" class="form-control" id="firstname" name="firstname">
                 </div>
                 <div class="mb-3">
-                    <label for="telephone" class="form-label">Telephone</label>
-                    <input type="text" class="form-control" id="telephone" name="telephone">
+                    <label for="phone" class="form-label">Telephone</label>
+                    <input type="text" class="form-control" id="phone" name="phone">
                 </div>
                 <div class="mb-3">
                     <label for="email"class="form-label">Email</label>
