--- a/public/assets/css/course_white_block.css
+++ b/public/assets/css/course_white_block.css
@@ -21,8 +21,10 @@
 }
 
 .white-block-text {
-    padding-top: 20px;
-    margin: 10px;
+    --padding-top: 20px;
+    --margin: 10px;
+    padding-top: var(--padding-top);
+    margin: var(--margin);
     display: flex;
     flex-wrap: wrap;
 }
