US23-01 rm novalidate

--- a/src/View/User/Includes/_contact_grey_block.html.twig
+++ b/src/View/User/Includes/_contact_grey_block.html.twig
@@ -1,5 +1,5 @@
 {% block contact_grey_block %}
-    <form class="contact-grey-title" methode="POST" novalidate>
+    <form class="contact-grey-title" methode="POST">
         <div class="grey-block col-xl-3 offset-xl-8 col-sm-10 offset-sm-1">
             <div class="contact-grey-section">
                 <div class="mb-3">
