--- a/src/View/User/Includes/_stage_grey_block.html.twig
+++ b/src/View/User/Includes/_stage_grey_block.html.twig
@@ -1,5 +1,5 @@
 {% block stage_grey_block %}
-    <div class="grey-block col-xl-3 offset-xl-8 col-sm-10 offset-sm-1">
+    <div class="grey-block col-xl-8 m-0 col-sm-12">
         <div class="grey-block-content">
             <h2 class="grey-block-title">
                 CONDITIONS
