--- a/src/View/User/stage.html.twig
+++ b/src/View/User/stage.html.twig
@@ -4,6 +4,12 @@
 {% endblock %}
 {% block content %}
     {% include 'Includes/_banner.html.twig' with {image: 'collector.webp', alt: 'desesperate horse', title: 'STAGES'} %}
-    {% include 'User/Includes/_stage_white_block.html.twig' %}
-    {% include 'User/Includes/_stage_grey_block.html.twig' %}
+    <div class='content-page'>
+        <div class='left-page'>
+            {% include 'User/Includes/_stage_white_block.html.twig' %}
+        </div>
+        <div class='right-page'>
+            {% include 'User/Includes/_stage_grey_block.html.twig' %}
+        </div>
+    </div>
 {% endblock %}
