changement des quotes

--- a/src/View/User/stage.html.twig
+++ b/src/View/User/stage.html.twig
@@ -1,6 +1,6 @@
 {% extends 'User/layout_user.html.twig' %}
 {% block stylesheet %}
-    <link rel="stylesheet" href="/assets/css/stage.css">
+    <link rel='stylesheet' href='/assets/css/stage.css'>
 {% endblock %}
 {% block content %}
     {% include 'Includes/_banner.html.twig' with {image: 'collector.webp', alt: 'desesperate horse', title: 'STAGES'} %}
