--- a/src/View/User/Includes/_inscription_form_stages.html.twig
+++ b/src/View/User/Includes/_inscription_form_stages.html.twig
@@ -5,7 +5,7 @@
         </div>
         <div>
             {% if errors %}
-                <ul class="alert alert-danger">
+                <ul class="alert alert-danger col-8 offset-2 mt-3">
                 {% for error in errors %}
                     <li>{{ error }}</li>
                 {% endfor %}
