add stage carousel and image carousel adaptative

--- a/src/View/User/Includes/_carousel.html.twig
+++ b/src/View/User/Includes/_carousel.html.twig
@@ -7,13 +7,13 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/assets/images/faceharas.jpg" class="d-block w-100">
+                <img src="/assets/images/{{ image1 }}" class="d-block w-100">
             </div>
             <div class="carousel-item">
-                <img src="/assets/images/poneycarousel.jpg" class="d-block w-100">
+                <img src="/assets/images/{{ image2 }}" class="d-block w-100">
             </div>
             <div class="carousel-item">
-                <img src="/assets/images/prairieharas.jpg" class="d-block w-100">
+                <img src="/assets/images/{{ image3 }}" class="d-block w-100">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
