--- a/src/View/User/Includes/_course_white_block.html.twig
+++ b/src/View/User/Includes/_course_white_block.html.twig
@@ -11,7 +11,7 @@
             </p>
         </div>
         <div class='carousel'>
-            {% include 'User/Includes/_carousel.html.twig' %}
+            {% include 'User/Includes/_carousel.html.twig' with {image1:'faceharas.jpg', image2:'poneycarousel.jpg', image3:'prairieharas.jpg'} %}
         </div>
     </div>
 {% endblock %}
