Add resultats formulaires sur admin cours

--- a/src/View/Admin/course_inscription.html.twig
+++ b/src/View/Admin/course_inscription.html.twig
@@ -4,5 +4,9 @@
         {% include 'Admin/Includes/_navbar.html.twig' %}
     </header>
 {% endblock %}
-{% block content %}
+{% block content %} 
+    <main>
+        <h1> Administration: Formulaires d'inscription aux cours </h1>
+        {% include 'Admin/Includes/_show_courses_inscription.html.twig' %}
+    </main>
 {% endblock %}
