refactor gestion picture in twig

--- a/src/View/User/Includes/_stage_white_block.html.twig
+++ b/src/View/User/Includes/_stage_white_block.html.twig
@@ -11,7 +11,7 @@
             </p>
         </div>
         <div class='carousel'>
-            {% include 'User/Includes/_carousel.html.twig' with {image1:'stage1.jpg', image2:'stage2.jpg', image3:'stage3.jpg'} %}
+            {% include 'User/Includes/_carousel.html.twig'%}
         </div>
     </div>
 {% endblock %}
