--- a/src/View/User/Includes/_carousel.html.twig
+++ b/src/View/User/Includes/_carousel.html.twig
@@ -1,20 +1,16 @@
 <div class="carousel">
     <div id="carouselExampleIndicators" class="carousel-slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            {% for image in images %}
+                <button type="button" data-bs-target="#carouselExampleIndicators" {% if loop.index == 1 %} class="active" aria-current="true" {% endif %} data-bs-slide-to="{{ loop.index - 1 }}" aria-label="Slide {{ loop.index }}"></button>
+            {% endfor %}
         </div>
         <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="/assets/images/{{ image1 }}" class="d-block w-100">
-            </div>
-            <div class="carousel-item">
-                <img src="/assets/images/{{ image2 }}" class="d-block w-100">
-            </div>
-            <div class="carousel-item">
-                <img src="/assets/images/{{ image3 }}" class="d-block w-100">
-            </div>
+            {% for image in images %}
+                <div class="carousel-item {% if loop.index == 1 %} active {% endif %}">
+                    <img src="/assets/images/{{ image }}" class="d-block w-100">
+                </div>
+            {% endfor %}
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
