Add resultats formulaires sur admin cours

--- a/src/View/Admin/course_inscription.html.twig
+++ b/src/View/Admin/course_inscription.html.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block content %} 
     <main>
-        <h1> Administration: Formulaires d'inscription aux cours </h1>
+        <h1>Administration: Demandes d'inscription aux cours</h1>
         {% include 'Admin/Includes/_show_courses_inscription.html.twig' %}
     </main>
 {% endblock %}
