mise en page contact

--- a/src/View/User/Includes/_contact_grey_block.html.twig
+++ b/src/View/User/Includes/_contact_grey_block.html.twig
@@ -1,6 +1,6 @@
 {% block contact_grey_block %}
-    <form class="contact-grey-title" methode="POST">
-        <div class="grey-block col-xl-3 offset-xl-8 col-sm-10 offset-sm-1">
+    <div class="grey-block col-xl-7 m-0 col-sm-12">
+        <form class="contact-grey-title" methode="POST">
             <div class="contact-grey-section">
                 <div class="mb-3">
                     <label for="lastname" class="form-label">Nom</label>
@@ -24,6 +24,6 @@
                 </div>
                 <button class="button">Envoyer</button>
             </div>
-        </div>
-    </form>
+        </form>
+    </div>
 {% endblock %}
