--- a/src/View/User/Includes/_contact_white_block.html.twig
+++ b/src/View/User/Includes/_contact_white_block.html.twig
@@ -1,5 +1,5 @@
 {% block contact_white_block %}
-    <div class="contact-white-block-section col-xl-5 offset-xl-2 col-sm-10 offset-sm-1">
+    <div class="contact-white-block-section col-xl-8 col-md-11 offset-md-1 m-0 col-sm-12">
         <div class="white-block-title-text">
             <h2 class="white-block-title">
             ACCES
