--- a/public/assets/css/contact_grey_block.css
+++ b/public/assets/css/contact_grey_block.css
@@ -1,12 +1,13 @@
 .contact-grey-section {
     --padding-section: 2em;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     padding: var(--padding-section);
     background-color: var(--grey);
     flex-direction: column;
     flex-wrap: wrap;
     font-family: var(--text-font);
+    height: 100vh;
 }
 
 .button {
