--- a/public/assets/css/contact_white_block.css
+++ b/public/assets/css/contact_white_block.css
@@ -1,7 +1,7 @@
 .contact-white-block-section {
     --padding: 2em;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     padding: var(--padding); 
     background-color: var(--light);
     flex-direction: column;
