--- a/src/View/User/Includes/_contact_grey_block.html.twig
+++ b/src/View/User/Includes/_contact_grey_block.html.twig
@@ -1,6 +1,6 @@
 {% block contact_grey_block %}
     <div class="grey-block col-xl-7 m-0 col-sm-12">
-        <form class="contact-grey-title" methode="POST">
+        <form class="contact-grey-title" method="POST">
             <div class="contact-grey-section">
                 <div class="mb-3">
                     <label for="lastname" class="form-label">Nom</label>
