change banner for all pages

--- a/src/View/User/haras.html.twig
+++ b/src/View/User/haras.html.twig
@@ -3,7 +3,7 @@
     <link rel='stylesheet' href='/assets/css/haras.css'>
 {% endblock %}
 {% block content %}
-    {% include 'Includes/_banner.html.twig' with {image: 'collector.webp', alt: 'desesperate horse', title: 'HARAS'} %}
+    {% include 'Includes/_banner.html.twig' with {image: 'faceharas.jpg', alt: 'haras', title: 'HARAS'} %}
     <div class='content-page'>
         <div class='left-page'>
             {% include 'User/Includes/_haras_white_block.html.twig' %}
