--- a/src/View/User/course.html.twig
+++ b/src/View/User/course.html.twig
@@ -3,7 +3,7 @@
     <link rel='stylesheet' href='/assets/css/course.css'>
 {% endblock %}
 {% block content %}
-    {% include 'Includes/_banner.html.twig' with {image: 'collector.webp', alt: 'desesperate horse', title: 'COURS'} %}
+    {% include 'Includes/_banner.html.twig' with {image: 'banner_course.jpg', alt: 'cours', title: 'COURS'} %}
     <div class='content-page'>
         <div class='left-page'>
             {% include 'User/Includes/_course_white_block.html.twig' %}
