changements lorem parge 1-3

--- a/public/assets/css/haras_white_block.css
+++ b/public/assets/css/haras_white_block.css
@@ -23,6 +23,15 @@
     flex-wrap: wrap;
 }
 
+.title {
+    --margin-top: 0.8em;
+    --font-size: 1.2em;
+    margin-top: var(--margin-top);
+    font-size: var(--font-size);
+    font-weight: bold;
+    text-align: center;
+}
+
 @media (min-width: 1000px) {
     .haras-white-block-section {
         --height: 100vh;
