--- a/src/View/User/Includes/_course_tab.html.twig
+++ b/src/View/User/Includes/_course_tab.html.twig
@@ -5,7 +5,9 @@
                 CONDITIONS
             </h2>
             <p class="tab-text">
-                Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum.
+                A partir de 18 mois pour le Baby-Poney, jusqu'à un haut niveau d'équitation.
+                Équipement obligatoire prêté par le Haras pour les plus petits. Pantalon long, bottes et
+                casque/bombe obligatoire pour les plus grands.
             </p>
         </div>
         <div class="tab-title-text">
@@ -13,7 +15,11 @@
                 INSCRIPTION
             </h2>
             <p class="tab-text">
-                Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum.
+                Vous souhaitez découvrir le poney en famille, apprendre le dressage de poney tout en s'amusant,
+                ou vous initier au trot et au galop pour les plus jeunes? </br>
+                Vous souhaitez apprendre la cavalerie, panser, seller, monter à cheval ou encore faire de la compétition ? </br>
+                Le Haras du Val de Loire est l'endroit idéal ! </br>
+                Pour les nouveaux comme pour les plus chevronés n'hésitez pas à vous inscrire !
             </p>
         </div>
         <div class="btn-insc">
@@ -22,7 +28,7 @@
             </a>
         </div>
         <h2 class="tab-title">
-            DETAILS
+            DÉTAILS
         </h2>
         <div class="tab">
             {% for course in courses %}
