--- a/src/View/User/Includes/_course_white_block.html.twig
+++ b/src/View/User/Includes/_course_white_block.html.twig
@@ -1,13 +1,13 @@
 {% block course_white_block %}
     <div class="course-white-block-section col-xl-8 col-md-11 offset-md-1 m-0 col-sm-12">
         <div class="white-block-title-text">
+            <h2 class="tab-title">
+                AGRÉMENTS ET QUALITÉS
+            </h2>
             <p class="white-block-text col-12">
-                Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum.
-            </p>
-        </div>
-        <div class="white-block-title-text col-12">
-            <p class="white-block-text">
-                Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum.
+                Le centre équestre, soutenu par la ville de Saint Denis en Val, est agréé label qualité FFE (Fédération Française d'Equitation), ce qui nous autorise à utiliser les méthodes et le matériel spécifiques de l'équitation à poney et à faire passer les examens appropriés.
+                Ce poney-club, proche d'Orléans, met à la disposition de vos enfants une cavalerie adaptée à leur niveau ainsi que des installations qui leur permettront de pratiquer l’équitation en toute sécurité.
+                Les plus jeunes pourront apprendre à monter tout en s'amusant, d'abord avec de petits poneys, bien à leur taille, puis sur des montures plus grandes.            
             </p>
         </div>
         <div class='carousel'>
