--- a/src/View/User/Includes/_haras_white_block.html.twig
+++ b/src/View/User/Includes/_haras_white_block.html.twig
@@ -1,13 +1,18 @@
 {% block haras_white_block %}
     <div class="haras-white-block-section col-xl-8 col-md-11 offset-md-1 m-0 col-sm-12">
         <div class="white-block-title-text">
+            <h2 class="title">
+                PRÉSENTATION GÉNÉRALE
+            </h2>
             <p class="white-block-text col-12">
-                Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum. 
+                Situé à 10 minutes d'Orléans centre, votre poney-club/centre équestre "Le Haras du Val de Loire" est installé sur la commune de Saint Denis en Val. </br></br>
             </p>
         </div>
         <div class="white-block-title-text col-12">
             <p class="white-block-text">
-                Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum. 
+                Possibilité du plus petit (dès 18 mois) au plus grand (ados, adultes, séniors...) de découvrir l'équitation tout au long de l'année.
+                Vacances, stages éthologie, dressage, saut d'obstacles, rando-brunch, compétitions, visite de l'élevage poney... Beaucoup de prestations sont proposées, sans oublier les cours, pour tous niveaux.
+                Les inscriptions aux cours d'équitation et les inscriptions aux stages se font tout au long de l'année.
             </p>
             {% include 'User/Includes/_haras_googlemap.html.twig' %}
         </div>
