--- a/src/View/User/Includes/_haras_grey_block.html.twig
+++ b/src/View/User/Includes/_haras_grey_block.html.twig
@@ -2,11 +2,14 @@
     <div class="haras-grey-section col-xl-8 m-0 col-sm-12">
         <div class="tab-title-text">
             <h2 class="haras-grey-title">
-                INFORMATIONS
+                INFRASTRUCTURE
             </h2>
-            <p class="haras-grey-text">
-                Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum. Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum. 
-            </p>
+            <ul class="haras-grey-text col-sm-6 offset-sm-3">
+                <li>Un terrain de cross niveau amateur</li>
+                <li>Une écurie de club de 10 boxes, un abri</li>
+                <li>Une écurie propriétaire de 10 boxes grand confort</li>
+                <li>Une sellerie chevaux et une poneys</li>            
+            </ul>
         </div>
     </div>
 {% endblock %}
