--- a/src/View/User/Includes/_welcome_background_slideshow.html.twig
+++ b/src/View/User/Includes/_welcome_background_slideshow.html.twig
@@ -2,18 +2,14 @@
     <div class="load"></div>
     <div class="content">
         <div class="principal col-12">
-            <h1>lorem ipsum</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+            <h1 class="mt-5">Haras du Val de Loire</h1>
             <div class="card border-0">
-                <div class="card-body">
-                    <h2 class="card-title">Lorem ipsum</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi rutrum lectus sed velit fermentum sollicitudin. Nulla molestie metus eget.</p>
+                <div class="card-body col-xl-7 offset-xl-5 col-sm-12">
+                    <h2 class="card-title">École d'équitation familiale</h2>
+                    <p class="card-text">Situé à 10 minutes d'Orléans centre, votre poney-club/centre équestre "Le Haras du Val de Loire" est installé sur la commune de Saint Denis en Val. </br></br>
+                    Vous pourrez pratiquer l'équitation en toute sécurité, avec une cavalerie adaptée et respectée selon les règles d'étholgie, à des tarifs raisonés. </br></br>
+                    Ambiance familiale et chaleureuse garantie, cette école d'équitation permet à tous de s'épanouir dans la nature, tout en faisant du sport. </br></br>
                 </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item border-0">Lorem ipsum dolor.</li>
-                    <li class="list-group-item border-0">Lorem ipsum dolor sit.</li>
-                    <li class="list-group-item border-0">Lorem ipsum dolor.</li>
-                </ul>
             </div>
         </div>
     </div>
