--- a/public/assets/css/haras_grey_block.css
+++ b/public/assets/css/haras_grey_block.css
@@ -1,10 +1,8 @@
 .haras-grey-section {
     --padding: 2em;
     display: flex;
-
-    justify-content: flex-end;
+    justify-content: flex-start;
     padding: var(--padding);
-
     background-color: var(--grey);
     flex-direction: column;
     flex-wrap: wrap;
