--- a/src/View/User/Includes/_carousel.html.twig
+++ b/src/View/User/Includes/_carousel.html.twig
@@ -1,5 +1,5 @@
-<div class="carousel">
-    <div id="carouselExampleIndicators" class="carousel-slide" data-bs-ride="carousel">
+<div class="carousel mt-5 pt-5">
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
             {% for image in images %}
                 <button type="button" data-bs-target="#carouselExampleIndicators" {% if loop.index == 1 %} class="active" aria-current="true" {% endif %} data-bs-slide-to="{{ loop.index - 1 }}" aria-label="Slide {{ loop.index }}"></button>
