--- a/src/View/Admin/Includes/_show_courses_inscription.html.twig
+++ b/src/View/Admin/Includes/_show_courses_inscription.html.twig
@@ -23,6 +23,7 @@
                 <td>{{ pupil.lastname }}</td>
                 <td>{{ pupil.email }}</td>
                 <td>{{ pupil.phone_number }}</td>
+                <td><a href="/adminCourseInscription/edit/{{ pupil.id }}" class="btn btn-sm btn-secondary mb-1">Editer</a></td>
             </tr>
         {% endfor %}
         </tbody>
