--- a/public/assets/css/course.css
+++ b/public/assets/css/course.css
@@ -1,5 +1,20 @@
 @import 'course_tab.css';
 @import 'course_white_block.css';
+.calendar-courses .card {
+    --font-size: 0.6em;
+    --width-card: 100%;
+    font-size: var(--font-size);
+    width: var(--width-card);
+}
+
+.calendar-courses .card-header {
+    background-color: var(--primary-color);
+}
+
+.calendar-courses .list-group-item {
+    --height-box: 60px;
+    height: var(--height-box);
+}
 
 @media (min-width: 1000px) {
     .content-page {
@@ -12,7 +27,6 @@
         padding-bottom: var(--padding-bottom);
         min-height: var(--min-height);
     }
-    
     .left-page {
         --width: 100vw;
         --min-height: 120vh;
@@ -21,11 +35,16 @@
         width: var(--width);
         min-height: var(--min-height);
     }
-    
     .right-page {
         --width: 60vw;
         display: flex;
         min-height: var(--min-height);
         width: var(--width);
+    }
+}
+
+@media screen and (max-width: 575px) {
+    .calendar-courses .list-group-item {
+        border: none;
     }
 }
