--- a/public/assets/css/haras_white_block.css
+++ b/public/assets/css/haras_white_block.css
@@ -5,7 +5,6 @@
     padding: var(--padding); 
     background-color: var(--light);
     flex-direction: column;
-    flex-wrap: wrap;
     font-family: var(--text-font);
 }
 
@@ -34,7 +33,7 @@
 
 @media (min-width: 1000px) {
     .haras-white-block-section {
-        --height: 100vh;
+        --height: 100%;
         height: var(--height);
     }
 }
