--- a/src/View/User/Includes/_course_white_block.html.twig
+++ b/src/View/User/Includes/_course_white_block.html.twig
@@ -1,5 +1,5 @@
 {% block course_white_block %}
-    <div class="course-white-block-section col-xl-8 col-md-11 offset-md-1 m-0 col-sm-12">
+    <div class="course-white-block-section col-xl-8 col-lg-11 offset-lg-1 m-0 col-sm-12">
         <div class="white-block-title-text">
             <h2 class="tab-title">
                 AGRÉMENTS ET QUALITÉS
